cmake_minimum_required(VERSION 3.6)
project(iwd_gm)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
        client/ad-hoc.c
        client/adapter.c
        client/agent-manager.c
        client/agent-manager.h
        client/agent.c
        client/agent.h
        client/ap.c
        client/command.c
        client/command.h
        client/dbus-proxy.c
        client/dbus-proxy.h
        client/device.c
        client/device.h
        client/display.c
        client/display.h
        client/known-networks.c
        client/main.c
        client/network.c
        client/network.h
        client/properties.c
        client/properties.h
        client/station.c
        client/wsc.c
        ell/asn1-private.h
        ell/base64.c
        ell/base64.h
        ell/cert-private.h
        ell/cert.c
        ell/cert.h
        ell/checksum.c
        ell/checksum.h
        ell/cipher.c
        ell/cipher.h
        ell/dbus-client.c
        ell/dbus-client.h
        ell/dbus-filter.c
        ell/dbus-message.c
        ell/dbus-name-cache.c
        ell/dbus-private.h
        ell/dbus-service.c
        ell/dbus-service.h
        ell/dbus-util.c
        ell/dbus.c
        ell/dbus.h
        ell/dhcp-lease.c
        ell/dhcp-private.h
        ell/dhcp-transport.c
        ell/dhcp.c
        ell/dhcp.h
        ell/dir.c
        ell/dir.h
        ell/ell.h
        ell/file.c
        ell/file.h
        ell/genl-private.h
        ell/genl.c
        ell/genl.h
        ell/gvariant-private.h
        ell/gvariant-util.c
        ell/hashmap.c
        ell/hashmap.h
        ell/hwdb.c
        ell/hwdb.h
        ell/idle.c
        ell/idle.h
        ell/io.c
        ell/io.h
        ell/key.c
        ell/key.h
        ell/log.c
        ell/log.h
        ell/main.c
        ell/main.h
        ell/missing.h
        ell/net.c
        ell/net.h
        ell/netlink-private.h
        ell/netlink.c
        ell/netlink.h
        ell/pem.c
        ell/pem.h
        ell/pkcs5-private.h
        ell/pkcs5.c
        ell/pkcs5.h
        ell/plugin.c
        ell/plugin.h
        ell/private.h
        ell/queue.c
        ell/queue.h
        ell/random.c
        ell/random.h
        ell/ringbuf.c
        ell/ringbuf.h
        ell/settings.c
        ell/settings.h
        ell/signal.c
        ell/signal.h
        ell/siphash-private.h
        ell/siphash.c
        ell/string.c
        ell/string.h
        ell/strv.c
        ell/strv.h
        ell/test.c
        ell/test.h
        ell/timeout.c
        ell/timeout.h
        ell/tls-private.h
        ell/tls-record.c
        ell/tls.c
        ell/tls.h
        ell/uintset.c
        ell/uintset.h
        ell/utf8.c
        ell/utf8.h
        ell/util.c
        ell/util.h
        ell/uuid.c
        ell/uuid.h
        linux/nl80211.h
        monitor/display.c
        monitor/display.h
        monitor/main.c
        monitor/nlmon.c
        monitor/nlmon.h
        monitor/pcap.c
        monitor/pcap.h
        plugins/ofono.c
        plugins/sim_hardcoded.c
        src/adhoc.c
        src/adhoc.h
        src/agent.c
        src/agent.h
        src/ap.c
        src/ap.h
        src/backtrace.c
        src/backtrace.h
        src/builtin.h
        src/common.c
        src/common.h
        src/crypto.c
        src/crypto.h
        src/dbus.c
        src/dbus.h
        src/device.c
        src/device.h
        src/eap-aka.c
        src/eap-gtc.c
        src/eap-md5.c
        src/eap-mschapv2.c
        src/eap-mschapv2.h
        src/eap-peap.c
        src/eap-private.h
        src/eap-pwd.c
        src/eap-sim.c
        src/eap-tls-common.c
        src/eap-tls-common.h
        src/eap-tls.c
        src/eap-ttls.c
        src/eap-wsc.c
        src/eap-wsc.h
        src/eap.c
        src/eap.h
        src/eapol.c
        src/eapol.h
        src/eapolutil.c
        src/eapolutil.h
        src/ecc.c
        src/ecc.h
        src/ecdh.c
        src/ecdh.h
        src/ftutil.c
        src/ftutil.h
        src/handshake.c
        src/handshake.h
        src/ie.c
        src/ie.h
        src/iwd.h
        src/knownnetworks.c
        src/knownnetworks.h
        src/main.c
        src/mpdu.c
        src/mpdu.h
        src/mschaputil.c
        src/mschaputil.h
        src/netdev.c
        src/netdev.h
        src/network.c
        src/network.h
        src/nl80211util.c
        src/nl80211util.h
        src/owe.c
        src/owe.h
        src/plugin.c
        src/plugin.h
        src/rfkill.c
        src/rfkill.h
        src/sae.c
        src/sae.h
        src/scan.c
        src/scan.h
        src/simauth.c
        src/simauth.h
        src/simutil.c
        src/simutil.h
        src/station.c
        src/station.h
        src/storage.c
        src/storage.h
        src/util.c
        src/util.h
        src/watchlist.c
        src/watchlist.h
        src/wiphy.c
        src/wiphy.h
        src/wsc.c
        src/wscutil.c
        src/wscutil.h
        tools/hwsim.c
        tools/test-runner.c
        unit/test-arc4.c
        unit/test-client.c
        unit/test-cmac-aes.c
        unit/test-crypto.c
        unit/test-eap-mschapv2.c
        unit/test-eap-sim.c
        unit/test-eapol.c
        unit/test-ecc.c
        unit/test-ecdh.c
        unit/test-hmac-md5.c
        unit/test-hmac-sha1.c
        unit/test-hmac-sha256.c
        unit/test-ie.c
        unit/test-kdf-sha256.c
        unit/test-mpdu.c
        unit/test-prf-sha1.c
        unit/test-sae.c
        unit/test-ssid-security.c
        unit/test-ssid-to-utf8.c
        unit/test-wsc.c
        wired/dbus.c
        wired/dbus.h
        wired/ethdev.c
        wired/ethdev.h
        wired/main.c
        wired/network.c
        wired/network.h
        config.h)

add_executable(iwd_gm ${SOURCE_FILES})